--- a/site/test.html
+++ b/site/test.html
@@ -1,16 +1,20 @@
 <html>
 <head>
-
+<link rel="stylesheet" type="text/css" href="MS_IU School of Medicine_files/test.css" />
 </head>
 <body>
-
-<div id="ok" style="background-color: orange; height: 200px;">
-  <button onclick="changeColor()">Change Color</button> 
+<div class="control-group">
+    <h1>Checkboxes</h1>
+    <label class="control control--checkbox">First checkbox
+      <input type="checkbox" checked="checked"/>
+      <div class="control__indicator"></div>
+    </label>
+    <label class="control control--checkbox">Second checkbox
+      <input type="checkbox"/>
+      <div class="control__indicator"></div>
+    </label>
 </div>
-<script>
-    function changeColor() {
-        document.getElementById("ok").style.backgroundColor = 'green';
-    }
-</script>
+
+
 </body>
 </html>
