--- a/site/contact.html
+++ b/site/contact.html
@@ -249,7 +249,9 @@ Student Life      		      </label></div></div></div><input type="hidden" name="a
     action="https://script.google.com/macros/s/AKfycbz3toarorpbfj5KTb9ENO-SrHaOPk0N-Rf3XZy63YNnihyo-AY/exec">
 
     <h1>Contact Us</h1>
-    <p>If you have any questions or need to get in contact with us, please fill out the form below.</p><br />  
+    <p>If you have any questions or need to get in contact with us, please fill out the form below.</p>  
+
+    <p><b><u>All fields are required</u></b></p><br /> 
 
         <div class="form-group">
             
