--- a/site7.19/home.html
+++ b/site7.19/home.html
@@ -16,6 +16,9 @@
     <script async="" src="./siteFiles/gtm.js.download"></script>
     <script>/*<![CDATA[*/(function (w, d, s, l, i) { w[l] = w[l] || []; w[l].push({ 'gtm.start': new Date().getTime(), event: 'gtm.js' }); var f = d.getElementsByTagName(s)[0], j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f); })(window, document, 'script', 'dataLayer', 'GTM-TGCJLX');/*]]>*/</script>
     <script>        (function (i, s, o, g, r, a, m) { i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () { (i[r].q = i[r].q || []).push(arguments) }, i[r].l = 1 * new Date(); a = s.createElement(o), m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m) })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga'); ga('create', 'UA-56416819-15', 'auto'); ga('send', 'pageview');</script>
+
+    <!-- where contact us scripts go -->
+
     <link href="./siteFiles/style.css" media="screen" rel="stylesheet" type="text/css">
     <link rel="stylesheet" id="iu-branding-css" href="./siteFiles/brand.css" type="text/css" media="all">
     <meta name="description" content="The Department of Neurology focuses on advancing neurological health through innovation and excellence in education, research and patient care.">
